HTTP server API added
HTTP server API added
Undertow integration refactored
IoC and Config examples updated
Docs updated
Services tele-API fix to method generic parameters support
IoC module unchecked warnings  suppression added
Packages import optimized for all modules